--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5433/mvcdb
+spring.datasource.username=postgres
+spring.datasource.password=P@$sw0rd
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.show-sql=true
